smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/namespace/unclosed-string3.smithy
// Syntax error at line 6, column 1: Expected: '"', but found '[EOF]'
namespace abc.def
@foo("
hello
there\"
